Started to add "real" components to the browse page template
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/company-name/HEAD@150 7033f55c-6c29-4ad8-afba-765cb616e738